--- a/src/features/movie/components/TableMovie/style.module.css
+++ b/src/features/movie/components/TableMovie/style.module.css
@@ -18,8 +18,10 @@
   color: #0a3d6d;
   font-size: 20px;
   margin-right: 15px;
+  cursor: pointer;
 }
 .btn_delete {
   color: #ad200d;
   font-size: 20px;
+  cursor: pointer;
 }
