--- a/src/features/user/components/FormUser/style.module.css
+++ b/src/features/user/components/FormUser/style.module.css
@@ -10,6 +10,7 @@
   padding-left: 0;
 }
 .btn_submit {
+  margin-top: 20px;
   margin-right: 30px;
   padding: 5px 20px;
   background-color: #ad200d;
@@ -24,6 +25,7 @@
   border: 1px solid #ad200d;
 }
 .btn_cancel {
+  margin-top: 20px;
   background-color: #1890ff;
   color: #fff;
   border: 1px solid #1890ff;
