--- a/src/features/cinemaManagement/pages/ThongTinCumRap/style.module.css
+++ b/src/features/cinemaManagement/pages/ThongTinCumRap/style.module.css
@@ -14,11 +14,10 @@
   border-color: #ad200d;
   color: #ad200d;
 }
-.btn_edit,
-.btn_showtime {
+.btn_edit {
   color: #0a3d6d;
   font-size: 20px;
-  margin: 0 15px;
+  margin-right: 15px;
   cursor: pointer;
 }
 .btn_delete {
